<resources>
    <string name="app_name">TimerAndBuzzer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start_timer">StartTimer</string>
    <string name="title_activity_players">Players</string>
    <string name="players">How many people wants to play ?</string>
    <string name="Start">START</string>
    <string name="buzzer">GAME BUZZER</string>
    <string name="choosemode">Please Choose a Mode</string>
    <string name="timer">REACTION TIMER</string>
    <string name="two">TWO</string>
    <string name="three">THREE</string>
    <string name="four">FOUR</string>
    <string name="title_activity_two_players">TwoPlayers</string>
    <string name="title_activity_three_players">ThreePlayers</string>
    <string name="title_activity_four_players">FourPlayers</string>
    <string name="player1">PLAYER 1</string>
    <string name="player2">PLAYER 2</string>
    <string name="player3">PLAYER 3</string>
    <string name="player4">PLAYER 4</string>
    <string name="whowin">Who will WIN?</string>
    <string name="record" />
    <string name="timerecord">TIME RECORDS</string>
    <string name="title_activity_listofrtime">Listofrtime</string>
    <string name="title_activity_time_statistics">timeStatistics</string>
    <string name="statistic">RECORD STATISTICS</string>
    <string name="title_activity_two_player_list">TwoPlayerList</string>
    <string name="buzzerrecord">BUZZERS RECORDS</string>
    <string name="title_activity_nodata">Nodata</string>
    <string name="clear">CLEAR</string>
    <string name="title_activity_two_buzzercounts">TwoBuzzercounts</string>
    <string name="buzzercount">BUZZER COUNTS</string>
    <string name="title_activity_three_player_list">ThreePlayerLIst</string>
    <string name="title_activity_four_player_list">FourPlayerList</string>
    <string name="title_activity_three_buzzercounts">ThreeBuzzercounts</string>
    <string name="title_activity_four_buzzercounts">FourBuzzercounts</string>
</resources>
