<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="timerandbuzzer.cs.ualberta.ca.timerandbuzzer.Players">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/players"
        android:id="@+id/numberplayerstextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="50sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:id="@+id/twobutton"
        android:layout_below="@+id/numberplayerstextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp"
        android:layout_alignEnd="@+id/numberplayerstextView"
        android:textSize="40sp"
        android:onClick="GoTwoPlayers" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:id="@+id/threebutton"
        android:layout_below="@+id/twobutton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:onClick="GoThreePlayers" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:id="@+id/fourbutton"
        android:layout_below="@+id/threebutton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:onClick="GoFourPlayers" />

</RelativeLayout>
