<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="timerandbuzzer.cs.ualberta.ca.timerandbuzzer.FourPlayers">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1"
        android:id="@+id/oneplayerbutton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:id="@+id/twoplayerbutton"
        android:textSize="60dp"
        android:layout_below="@+id/oneplayerbutton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player3"
        android:id="@+id/threeplayerbutton"
        android:textSize="60dp"
        android:layout_above="@+id/fourplayerButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="53dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player4"
        android:id="@+id/fourplayerButton"
        android:textSize="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="WHO WILL WIN?"
        android:id="@+id/winner4textView"
        android:layout_below="@+id/oneplayerbutton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="40dp" />

</RelativeLayout>
