<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="timerandbuzzer.cs.ualberta.ca.timerandbuzzer.ThreePlayers">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1"
        android:id="@+id/playeronebutton"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textSize="73sp"
        android:onClick="PlayeroneClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:id="@+id/player2button"
        android:textSize="73sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:onClick="PlayertwoClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player3"
        android:id="@+id/player3button"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/playeronebutton"
        android:textSize="73sp"
        android:onClick="PlayerthreeClicked" />

</RelativeLayout>
