<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/mainactivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choosemode"
        android:id="@+id/chooseModeTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="45sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:id="@+id/timerbutton"
        android:layout_below="@+id/chooseModeTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="71dp"
        android:layout_alignParentEnd="true"
        android:textSize="45sp"
        android:onClick="GoTimer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buzzer"
        android:id="@+id/buzzerbutton"
        android:layout_below="@+id/timerbutton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp"
        android:layout_alignParentEnd="true"
        android:textSize="48sp"
        android:onClick="GoBuzzer" />
</RelativeLayout>
